--- a/src/components/Home/HomeGame.less
+++ b/src/components/Home/HomeGame.less
@@ -30,7 +30,7 @@
 
   &:hover {
     color: #fff !important;
-    background: lighten(@seal-red, 5%) !important;
+    background: @seal-red-light !important;
   }
 }
 
@@ -78,15 +78,16 @@
   max-width: 800px;
   margin: 0 auto;
   font-size: 18px !important;
-  color: #666;
+  color: @text-color-secondary;
+  font-family: var(--font-serif);
 }
 
 .home-game-sub-header {
-  font-family: @font-sans;
+  font-family: var(--font-serif);
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: @gold-border; /* Gold/Bronze accent */
+  color: @gold-border;
   display: block;
   text-align: center;
   margin-bottom: 8px;
