--- a/src/components/common/StatisticsCard/style.less
+++ b/src/components/common/StatisticsCard/style.less
@@ -2,127 +2,127 @@
 
 // Statistics Card Styles: Anticon in top, text below, and number at the right
 .statistics-item {
-	color: var(--color-primary);
-	background-color: var(--color-primary-bg);
-	border-radius: var(--border-radius);
-	transition: all 0.3s ease;
+  color: var(--color-primary);
+  background-color: var(--color-primary-bg);
+  border-radius: var(--border-radius);
+  transition: all 0.3s ease;
 
-	padding: 12px 16px;
-	display: flex;
-	justify-content: space-between;
-	align-items: flex-end;
-	gap: 6px;
-	height: 100%;
-	border-radius: 6px;
+  padding: 12px 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 6px;
+  height: 100%;
+  border-radius: 6px;
 
-	@media (max-width: @screen-xs) {
-		padding: 8px;
-	}
+  @media (max-width: @screen-xs) {
+    padding: 8px;
+  }
 
-	&:hover {
-		transform: scale(1.01);
-		box-shadow: 0 2px 8px rgba(0, 0, 0, 0.025);
-		transition: transform 0.3s ease;
-	}
+  &:hover {
+    transform: scale(1.01);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.025);
+    transition: transform 0.3s ease;
+  }
 
-	.text {
-		color: rgba(0, 0, 0, 0.85);
-		font-weight: 550;
-		width: 100%;
+  .text {
+    color: var(--text-color-primary);
+    font-weight: 550;
+    width: 100%;
 
-		display: flex;
-		flex-direction: column;
-		gap: 6px;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
 
-		.anticon {
-			font-size: 16px;
-			color: var(--color-primary);
-		}
-	}
+    .anticon {
+      font-size: 16px;
+      color: var(--color-primary);
+    }
+  }
 
-	.num {
-		font-weight: 700;
-		font-size: 1.75rem;
-		line-height: 1;
+  .num {
+    font-weight: 700;
+    font-size: 1.75rem;
+    line-height: 1;
 
-		@media (max-width: @screen-xs) {
-			font-size: 1.25rem;
-		}
-	}
+    @media (max-width: @screen-xs) {
+      font-size: 1.25rem;
+    }
+  }
 
-	&.selected {
-		outline: 2px solid var(--color-primary);
-		box-shadow: var(--box-shadow-secondary);
-		outline-offset: 2px;
-		transition:
-			outline 0.1s linear,
-			box-shadow 0.3s ease,
-			outline-offset 0.3s ease;
-	}
+  &.selected {
+    outline: 2px solid var(--color-primary);
+    box-shadow: var(--box-shadow-secondary);
+    outline-offset: 2px;
+    transition:
+      outline 0.1s linear,
+      box-shadow 0.3s ease,
+      outline-offset 0.3s ease;
+  }
 
-	&.success {
-		border-left-color: #52c41a;
-		color: var(--color-success);
-		background-color: var(--color-success-bg);
+  &.success {
+    border-left-color: #52c41a;
+    color: var(--color-success);
+    background-color: var(--color-success-bg);
 
-		.anticon {
-			color: var(--color-success);
-		}
-	}
+    .anticon {
+      color: var(--color-success);
+    }
+  }
 
-	&.warning {
-		border-left-color: #faad14;
-		color: var(--color-warning);
-		background-color: var(--color-warning-bg);
+  &.warning {
+    border-left-color: #faad14;
+    color: var(--color-warning);
+    background-color: var(--color-warning-bg);
 
-		.anticon {
-			color: var(--color-warning);
-		}
-	}
+    .anticon {
+      color: var(--color-warning);
+    }
+  }
 
-	&.error {
-		border-left-color: #ff4d4f;
-		color: var(--color-error);
-		background-color: var(--color-error-bg);
+  &.error {
+    border-left-color: #ff4d4f;
+    color: var(--color-error);
+    background-color: var(--color-error-bg);
 
-		.anticon {
-			color: var(--color-error);
-		}
-	}
+    .anticon {
+      color: var(--color-error);
+    }
+  }
 
-	&.info {
-		border-left-color: #1890ff;
-		color: var(--color-info);
-		background-color: var(--color-info-bg);
+  &.info {
+    border-left-color: #1890ff;
+    color: var(--color-info);
+    background-color: var(--color-info-bg);
 
-		.anticon {
-			color: var(--color-info);
-		}
-	}
+    .anticon {
+      color: var(--color-info);
+    }
+  }
 
-	&.gray {
-		border-left-color: #1890ff;
-		color: #7a7a7a;
-		background-color: #fafafa;
+  &.gray {
+    border-left-color: #1890ff;
+    color: #7a7a7a;
+    background-color: #fafafa;
 
-		.anticon {
-			color: #7a7a7a;
-		}
-	}
+    .anticon {
+      color: #7a7a7a;
+    }
+  }
 
-	&.pointer {
-		cursor: pointer;
-	}
+  &.pointer {
+    cursor: pointer;
+  }
 
-	// Border trái với màu accent
-	&.border {
-		// // Nếu không ghi đè (css inline) thì mặc định sẽ lấy màu primary
-		// border-left: 4px solid var(--color-primary);
-		border-left: 4px solid;
-		border-radius: 0px 8px 8px 0px;
-	}
+  // Border trái với màu accent
+  &.border {
+    // // Nếu không ghi đè (css inline) thì mặc định sẽ lấy màu primary
+    // border-left: 4px solid var(--color-primary);
+    border-left: 4px solid;
+    border-radius: 0px 8px 8px 0px;
+  }
 
-	&.shadow {
-		box-shadow: var(--box-shadow-tertiary);
-	}
+  &.shadow {
+    box-shadow: var(--box-shadow-tertiary);
+  }
 }
